# chat-archive-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  file::memory:  pyproject.toml
chat_archive/: conftest.py  container.py  container_test.py  main.py  main_test.py
chat_archive/application/: app.py  app_test.py  use_cases_test.py
chat_archive/application/delete_user/: use_case.py
chat_archive/application/get_messages_by_day/: models.py  models_test.py  use_case.py
chat_archive/application/get_messages_by_period/: models.py  models_test.py  use_case.py
chat_archive/application/get_messages_by_user/: models.py  models_test.py  use_case.py
chat_archive/application/store_message/: models.py  models_test.py  use_case.py
chat_archive/domain/models/: message.py  message_test.py
chat_archive/domain/ports/: message_repository.py  message_repository_test.py
chat_archive/infrastructure/: logging.py  logging_test.py  request_context.py  request_context_test.py  timing.py  timing_test.py
chat_archive/infrastructure/db/: engine.py  engine_test.py  orm.py  orm_test.py
chat_archive/infrastructure/migrations/: alembic.ini  env.py  env_test.py  versions_test.py
chat_archive/infrastructure/web/: routes_v1.py  routes_v1_test.py
docker/postgres/: init-db.sh
docs/: README.md  deploy.md  docker.md  openapi.md
plans/: 001-dependency-injector-makefile-docker-init.md
scripts/: delete-user.sh  get-messages-by-day.sh  get-messages-by-period.sh  get-messages-by-user.sh  load_test.py  store-message.sh
(+3 files in other folders)
