[project]
name = "chat-archive"
version = "0.1.0"
description = "Chat Archive Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "dependency-injector>=4.42",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["chat_archive"]
addopts = "--cov=chat_archive --cov-report=term-missing"

[tool.coverage.run]
source = ["chat_archive"]
omit = [
    "chat_archive/**/__init__.py",
    "chat_archive/**/*_test.py",
    "chat_archive/conftest.py",
    "chat_archive/infrastructure/migrations/versions/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["chat_archive"]
exclude = ["chat_archive/**/*_test.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
